<resources>
    <string name="app_name">Agilidad sin humo</string>
    <string name="facebook_app_id">2604138186476057</string>
    <string name="fb_login_protocol_scheme">fb2604138186476057</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Scrum</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_header_desc">Scrum</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_login">Login</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_me">Mis publicaciones</string>
    <string name="menu_about">Quienes somos</string>
    <string name="menu_terms">Términos y legales</string>
    <string name="menu_close">Cerrar sesión</string>

    <string name="url_text">Pegar url</string>
    <string name="description_text">Descripción (Opcional)</string>
    <string name="qualification_text">Calificar</string>
    <string name="menu_close_session">Cerrar sessión</string>


    <string name="see_more">Ver más...</string>
    <string name="link_about">Link</string>
    <string name="open_public_url">¿Desea calificar una publicación de internet?</string>

    <string name="cancel_public_url">Cancelar</string>
    <string name="add_public_url">Publicar</string>

    <string name="welcome">Bienvenido</string>
    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="firebase_error_login">Error al iniciar sesión en Firebase</string>

</resources>
