<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_user"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_login"/>
        <item
                android:id="@+id/nav_me"
                android:icon="@drawable/ic_library_books_black_24dp"
                android:title="@string/menu_me"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/menu_about"/>
        <item
                android:id="@+id/nav_term"
                android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
                android:title="@string/menu_terms"/>
        <item
                android:id="@+id/nav_close"
                android:icon="@drawable/ic_input_black_24dp"
                android:title="@string/menu_close"/>
    </group>

<!--    <item android:title="Communicate">
        <menu>
        </menu>
    </item>-->

</menu>
